# course-hub

./: .gitignore  README.md  courses.txt  dbStructure.txt
archive/: CMakeLists.txt  CalendarEntryDialog.cpp  CalendarEntryDialog.h  CalendarTab.cpp  CalendarTab.h  MainTabs.cpp  MainTabs.h  Schedule.h  pythoncomm.cpp
archive/UI/: schedule.py
assets/: PYQT-TUTORIAL.py  requirements.txt  secrets.txt
assets/icons/: logo-project.psd
assets/pyqt-reference/: ConvUI.py  GlitchUI.py  HexEditor.py  VideoUI.py  base.py  frame.py  requirements.txt  tech.py
assets/pyqt-reference/copies/: ConvUI copy.py  GlitchUI copy 2.py  GlitchUI copy.py
doc/: dbStructure.txt
src/client/: CMakeLists.txt  CalendarEntry.cpp  CalendarEntryDialog.cpp  CalendarEntryDialog.h  CalendarTab.cpp  CalendarTab.h  MainTabs.cpp  MainUI.py  MainWidget.cpp  MainWidget.h  Schedule.cpp  ____tasksalert.py  course_scrape.py  dbController.py  interpret_raw_data.py  login.py  logo-project.psd  main.cpp  monthlyCalendar.py  mycourses_scrape.py  pyhelper.h  pytest.cpp  simple.cpp  tasksalert.py  temp_interpret.py  test_thing.py  weekly_calendar.py
src/client/UI/: monthlyCalendar.py
src/client/backup/: login.py  weekly_calendar.py
src/core/: dbController.py  main.py
src/scripts/: course-scrape.py  course_scrape.py  main.py  mycourses_scrape.py
src/server/: Makefile  __weekly_calendar.py  caller.c  caller.h  course_scrape.py  dbController.py  interpret_raw_data.py  login.py  main  main.c  main.py  monthtest.py  mycourses_scrape.py  tasksalert.py  test.py  test_controller.py  weekly_calendar.py
src/server/test/: test_controller.py
src/server/theo_test/: export.py  simple.pyx
